# aoc-2024-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
include/: graph.hpp  term_util.hpp  utils.hpp
inputs/: day02_example.txt
src/: main.cpp
src/00/: TASK.md  day00.hpp  part1.cpp  part2.cpp
src/01/: TASK.md  day01.hpp  part1.cpp  part2.cpp
src/02/: day02.hpp  part1.cpp  part2.cpp
src/03/: day03.hpp  part1.cpp  part2.cpp
src/04/: day04.hpp  part1.cpp  part2.cpp  shared.cpp
src/05/: day05.hpp  part1.cpp  part2.cpp
src/06/: day06.hpp  part1.cpp  part2.cpp
